[package]

name = "stable-skiplist"
version = "0.1.1"
authors = ["JP-Ellis <josh@jpellis.me>", "Robert O'Callahan <robert@ocallahan.org>"]

description = "Skiplist implementation in rust, providing fast insertion and removal.  A normal skiplist is implemented, as well as an ordered skiplist and a skipmap. This is modified to work on stable Rust 1.9.0."

documentation = "https://rocallahan.github.io/rust-stable-skiplist/doc/stable_skiplist/"
repository = "https://github.com/rocallahan/rust-stable-skiplist"

readme = "README.md"

keywords = ["collection", "skiplist", "sorted"]

license = "MIT"

[features]

unstable = []

[dependencies]

rand = "^0.3.12"
